Change only paragraph to a header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
      <title>Static Deploy Test</title>
  </head>
  <body>
-     <p>Static Deploy Test</p>
+     <h1>Static Deploy Test</h1>
  </body>
  </html>
