--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
  </head>
  <body>
      <h1>Static Deploy Test</h1>
-     <p>This is a static deploy test</p>
+     <h2>This is a static deploy test</h2>
  </body>
  </html>
